<package format="2">
  <name>rover_arm</name>
  <version>0.1.0</version>
  <description>Control node for 5-DOF robotic arm using ROS.</description>
  <maintainer email="toolbox@example.com">ToolBox Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ros_control</depend>
  <depend>joint_state_controller</depend>
</package>
