<package format="2">
  <name>rover_base</name>
  <version>0.1.0</version>
  <description>Node for rover base control including kinematics, sensors, safety watchdog, and diagnostics.</description>
  <maintainer email="toolbox@example.com">ToolBox Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>controller_manager</depend>
  <depend>transmission_interface</depend>
</package>
