<package format="2">
  <name>rover_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro for six-wheeled Ackermann rover with 5-DOF arm and sensors.</description>
  <maintainer email="toolbox@example.com">ToolBox Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>transmission_interface</depend>
</package>
