<package format='2'><name>rover_navigation</name><version>0.0.1</version><description>rover_navigation package</description><maintainer email='toolbox@example.com'>ToolBox Robotics</maintainer><license>MIT</license><buildtool_depend>catkin</buildtool_depend><depend>roscpp</depend><depend>rospy</depend><depend>nav_msgs</depend></package>