<package format="2">
  <name>rover_simulation</name>
  <version>0.1.0</version>
  <description>Simulation files for the rover in Gazebo including world, URDF, and controllers.</description>
  <maintainer email="toolbox@example.com">ToolBox Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>joint_state_controller</depend>
  <depend>ros_control</depend>
  <depend>controller_manager</depend>
</package>
