<package format="2">
  <name>rover_web</name>
  <version>0.1.0</version>
  <description>Web dashboard for monitoring and controlling the rover.</description>
  <maintainer email="toolbox@example.com">ToolBox Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>npm</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbridge_websocket</depend>
  <depend>web_video_server</depend>
  <depend>roslibjs</depend>
</package>
